# whatsapp-mcp

./: README.md
whatsapp-bridge/: .gitignore  CLAUDE.md  README.md  go.mod  install.sh  main.go  main.py  pyproject.toml  wa  wa-monitor.sh  wa.py
whatsapp-bridge/src/wa_cli/: main.py
